# music-downloader-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  broker_app.py  build.sh  celeryconfig.py  commands.py  config.yaml.example  dev.docker-compose.yml  docker-compose.yml  note_app.py  podman-run.sh  pyproject.toml  worker_app.py
broker/services/: notification.py  retry.py
broker/tasks/: __init__.py  spotify_music.py  yandex_music.py
locales/ru/: commands.ftl
locales/ru/admin/: admin.ftl  admins.ftl  broadcast.ftl  locales.ftl  users.ftl
locales/ru/note/: note.ftl
locales/ru/user/: user.ftl
migrations/: env.py
migrations/versions/: 24c7ef85d795_initial.py
systemd/: broker.service  note.service  worker.service
tgbot/: config_reader.py  fluent_loader.py
tgbot/database/: __init__.py  admin.py  base.py  mixins.py  user.py
tgbot/filters/: __init__.py  role.py  text.py  yandex_url.py
tgbot/filters/dialog/: __init__.py  role.py
tgbot/filters/url/: __init__.py  spotify.py  yandex.py
tgbot/filters/url/utils/: abc.py  types.py
tgbot/handlers/: __init__.py  commands.py
tgbot/handlers/admin/: __init__.py  admins.py  broadcast.py  locales.py  start.py  users.py
tgbot/handlers/user/: __init__.py  audio.py  spotify.py  start.py  yandex.py
tgbot/keyboard/inline/: url_kb.py
tgbot/middlewares/: db.py  media_group.py  role.py  throttling.py
tgbot/models/: album.py
tgbot/routes/: test.py
tgbot/services/: broadcaster.py  download_api.py  l10n_dialog.py  parts.py  repository.py  tasks.py
worker/middleware/: base_depends.py  notification.py  task_id.py
worker/services/: result_backend.py
worker/tasks/: __init__.py  spotify_music.py  yandex_music.py
(+7 files in other folders)
