[project]
version = "1.0.0"
name = "telegram-template"
requires-python = ">=3.9"
dependencies = [
    "aiogram-dialog~=2.2",
    "aiogram~=3.13",
    "adaptix~=3.0.0b8",
    "PyYAML~=6.0",
    "redis~=5.0",
    "cachetools~=5.3",
    "fluent.runtime~=0.4",
    "mutagen~=1.47",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 110
lint.extend-select = ["I"]
