[project]
version = "1.1.0"
name = "telegram-template"
requires-python = ">=3.9"
dependencies = [
    "aiogram-dialog~=2.2",
    "aiogram~=3.13",
    "httpx>=0.28",
    "redis>=5.0",
    "cachetools>=5.3",
    "fluent.runtime>=0.4",
    "yandex-music>=2.2",
    "spotdl>=4.2",
    "taskiq-redis>=1.0",
    "taskiq==0.11.16",
    "environ-config>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 110
lint.extend-select = ["I"]

[tool.uv.sources]
yandex-music = { git = "https://github.com/MarshalX/yandex-music-api", branch = "main" }
